--- a/one/.env
+++ b/one/.env
@@ -8,12 +8,16 @@ GATEWAY_COCKROACH_NODE_PORT=26357
 GATEWAY_COCKROACH_SQL_PORT=26257
 GATEWAY_COCKROACH_HTTP_PORT=8080
 GATEWAY_MILVUS_PORT=19530
+GATEWAY_ZOOKEEPER_PORT=2181
 GATEWAY_KAFKA_PORT=9092
 GATEWAY_KAFKA_UI_PORT=8082
-GATEWAY_ETCD_CLIENT_PORT=2378
+GATEWAY_ETCD_CLIENT_PORT=2379
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
 GATEWAY_MINIO_CONSOLE_PORT=9001
+GATEWAY_CLICKHOUSE_HTTP_PORT=8123
+GATEWAY_CLICKHOUSE_TCP_PORT=9100
+GATEWAY_SIGNOZ_FRONTEND_PORT=8083
 
 GATEWAY_REDIS_PASSWORD=password
 
@@ -21,13 +25,14 @@ GATEWAY_COCKROACH_USER=user
 GATEWAY_COCKROACH_PASSWORD=
 GATEWAY_COCKROACH_DATABASE=database
 
+GATEWAY_ZOOKEEPER_USER=user
+GATEWAY_ZOOKEEPER_PASSWORD=password
+
 GATEWAY_MILVUS_USER=user
 GATEWAY_MILVUS_PASSWORD=password
 
 GATEWAY_MINIO_ROOT_USER=user
 GATEWAY_MINIO_ROOT_PASSWORD=password
-
-GATEWAY_KAFKA_CLUSTER_ID=kafka-cluster-one
 
 NGINX_ONE_HOST=nginx-one
 NGINX_TWO_HOST=nginx-two
@@ -45,12 +50,21 @@ REDIS_ONE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
 REDIS_INSIGHT_ONE_HOST=redis-insight-one
 REDIS_INSIGHT_ONE_PORT=5540
 
+COCKROACH_ONE_HOST=cockroach-one
+COCKROACH_ONE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
+COCKROACH_ONE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
+COCKROACH_ONE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
+
 MILVUS_STANDALONE_HOST=milvus-standalone
 MILVUS_STANDALONE_PORT=${GATEWAY_MILVUS_PORT}
 
+ZOOKEEPER_ONE_HOST=zookeeper-one
+ZOOKEEPER_ONE_PORT=${GATEWAY_ZOOKEEPER_PORT}
+ZOOKEEPER_ONE_USER=${GATEWAY_ZOOKEEPER_USER}
+ZOOKEEPER_ONE_PASSWORD=${GATEWAY_ZOOKEEPER_PASSWORD}
+
 KAFKA_ONE_HOST=kafka-one
 KAFKA_ONE_PORT=${GATEWAY_KAFKA_PORT}
-KAFKA_ONE_NODE_ID=1
 
 KAFKA_UI_ONE_HOST=kafka-ui-one
 KAFKA_UI_ONE_PORT=8080
@@ -65,14 +79,23 @@ GATEWAY_ETCD_INITIAL_CLUSTER_STATE=new
 #GATEWAY_ETCD_INITIAL_CLUSTER_STATE=existing
 GATEWAY_ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster-one
 
+GATEWAY_CLICKHOUSE_PASSWORD=password
+
 MINIO_ONE_HOST=minio-one
 MINIO_ONE_NODE_PORT=${GATEWAY_MINIO_NODE_PORT}
 MINIO_ONE_CONSOLE_PORT=${GATEWAY_MINIO_CONSOLE_PORT}
 MINIO_ONE_ROOT_USER=${GATEWAY_MINIO_ROOT_USER}
 MINIO_ONE_ROOT_PASSWORD=${GATEWAY_MINIO_ROOT_PASSWORD}
 
-COCKROACH_ONE_HOST=cockroach-one
-COCKROACH_ONE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
-COCKROACH_ONE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
-COCKROACH_ONE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
+CLICKHOUSE_ONE_HOST=clickhouse-one
+CLICKHOUSE_ONE_HTTP_PORT=${GATEWAY_CLICKHOUSE_HTTP_PORT}
+CLICKHOUSE_ONE_TCP_PORT=${GATEWAY_CLICKHOUSE_TCP_PORT}
+CLICKHOUSE_ONE_PASSWORD=${GATEWAY_CLICKHOUSE_PASSWORD}
+
+SIGNOZ_ALERTMANAGER_HOST=signoz-alertmanager
+SIGNOZ_QUERY_SERVICE_HOST=signoz-query-service
+SIGNOZ_FRONTEND_HOST=signoz-frontend
+SIGNOZ_FRONTEND_PORT=3301
+SIGNOZ_OTEL_COLLECTOR_HOST=signoz-otel-collector
+SIGNOZ_LOGSPOUT_HOST=signoz-logspout
 
