--- a/one/nginx/two/template.nginx.conf
+++ b/one/nginx/two/template.nginx.conf
@@ -22,8 +22,12 @@ stream {
         server ${KAFKA_ONE_HOST}:${KAFKA_ONE_PORT};
     }
 
-    upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    upstream clickhouse_http {
+        server ${CLICKHOUSE_ONE_HOST}:${CLICKHOUSE_ONE_HTTP_PORT};
+    }
+
+    upstream clickhouse_tcp {
+        server ${CLICKHOUSE_ONE_HOST}:${CLICKHOUSE_ONE_TCP_PORT};
     }
 
     server {
@@ -47,8 +51,13 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_KAFKA_UI_PORT};
-        proxy_pass kafka_ui;
+        listen ${GATEWAY_CLICKHOUSE_HTTP_PORT};
+        proxy_pass clickhouse_http;
+    }
+
+    server {
+        listen ${GATEWAY_CLICKHOUSE_TCP_PORT};
+        proxy_pass clickhouse_tcp;
     }
 
 }
