--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -21,10 +21,6 @@ stream {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
-    upstream cockroachdb_node {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
-    }
-
     upstream cockroachdb_sql {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
     }
@@ -37,10 +33,6 @@ stream {
         server ${NGINX_TWO_HOST}:${MILVUS_STANDALONE_PORT};
     }
 
-    upstream etcd_client {
-        server ${NGINX_TWO_HOST}:${ETCD_ONE_CLIENT_PORT};
-    }
-
     upstream minio_node {
         server ${NGINX_TWO_HOST}:${MINIO_ONE_NODE_PORT};
     }
@@ -49,12 +41,20 @@ stream {
         server ${NGINX_TWO_HOST}:${MINIO_ONE_CONSOLE_PORT};
     }
 
+    upstream zookeeper {
+        server ${NGINX_TWO_HOST}:${ZOOKEEPER_ONE_PORT};
+    }
+
     upstream kafka {
         server ${NGINX_TWO_HOST}:${KAFKA_ONE_PORT};
     }
 
     upstream kafka_ui {
-        server ${NGINX_TWO_HOST}:${KAFKA_UI_ONE_PORT};
+        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    }
+
+    upstream signoz_frontend {
+        server ${SIGNOZ_FRONTEND_HOST}:${SIGNOZ_FRONTEND_PORT};
     }
 
 #     server {
@@ -78,11 +78,6 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_COCKROACH_NODE_PORT};
-        proxy_pass cockroachdb_node;
-    }
-
-    server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
         proxy_pass cockroachdb_sql;
     }
@@ -98,11 +93,6 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_ETCD_CLIENT_PORT};
-        proxy_pass etcd_client;
-    }
-
-    server {
         listen ${GATEWAY_MINIO_NODE_PORT};
         proxy_pass minio_node;
     }
@@ -113,6 +103,11 @@ stream {
     }
 
     server {
+        listen ${GATEWAY_ZOOKEEPER_PORT};
+        proxy_pass zookeeper;
+    }
+
+    server {
         listen ${GATEWAY_KAFKA_PORT};
         proxy_pass kafka;
     }
@@ -120,6 +115,11 @@ stream {
     server {
         listen ${GATEWAY_KAFKA_UI_PORT};
         proxy_pass kafka_ui;
+    }
+
+    server {
+        listen ${GATEWAY_SIGNOZ_FRONTEND_PORT};
+        proxy_pass signoz_frontend;
     }
 
 }
