--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -23,32 +23,20 @@ stream {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
-    upstream cockroachdb_node {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_NODE_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_NODE_PORT};
-    }
-
     upstream cockroachdb_sql {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_THREE_SQL_PORT};
     }
 
     upstream cockroachdb_http {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_HTTP_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_HTTP_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_THREE_HTTP_PORT};
     }
 
     upstream milvus {
         server ${NGINX_TWO_HOST}:${MILVUS_PROXY_PORT};
-    }
-
-    upstream etcd_client {
-        server ${NGINX_TWO_HOST}:${ETCD_ONE_CLIENT_PORT};
-        server ${NGINX_TWO_HOST}:${ETCD_TWO_CLIENT_PORT};
-        server ${NGINX_TWO_HOST}:${ETCD_THREE_CLIENT_PORT};
     }
 
     upstream minio_node {
@@ -94,11 +82,6 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_COCKROACH_NODE_PORT};
-        proxy_pass cockroachdb_node;
-    }
-
-    server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
         proxy_pass cockroachdb_sql;
     }
@@ -111,11 +94,6 @@ stream {
     server {
         listen ${GATEWAY_MILVUS_PORT};
         proxy_pass milvus;
-    }
-
-    server {
-        listen ${GATEWAY_ETCD_CLIENT_PORT};
-        proxy_pass etcd_client;
     }
 
     server {
