--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -21,24 +21,16 @@ stream {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
-    upstream cockroachdb_node {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
-    }
-
     upstream cockroachdb_sql {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_SQL_PORT};
     }
 
     upstream cockroachdb_http {
-        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
+        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_HTTP_PORT};
     }
 
     upstream milvus {
         server ${NGINX_TWO_HOST}:${MILVUS_STANDALONE_PORT};
-    }
-
-    upstream etcd_client {
-        server ${NGINX_TWO_HOST}:${ETCD_ONE_CLIENT_PORT};
     }
 
     upstream minio_node {
@@ -54,7 +46,7 @@ stream {
     }
 
     upstream kafka_ui {
-        server ${NGINX_TWO_HOST}:${KAFKA_UI_ONE_PORT};
+        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
     }
 
 #     server {
@@ -78,11 +70,6 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_COCKROACH_NODE_PORT};
-        proxy_pass cockroachdb_node;
-    }
-
-    server {
         listen ${GATEWAY_COCKROACH_SQL_PORT};
         proxy_pass cockroachdb_sql;
     }
@@ -95,11 +82,6 @@ stream {
     server {
         listen ${GATEWAY_MILVUS_PORT};
         proxy_pass milvus;
-    }
-
-    server {
-        listen ${GATEWAY_ETCD_CLIENT_PORT};
-        proxy_pass etcd_client;
     }
 
     server {
