--- a/one/nginx/two/template.nginx.conf
+++ b/one/nginx/two/template.nginx.conf
@@ -6,8 +6,16 @@ events {
 
 stream {
 
-    upstream etcd_client {
-        server ${ETCD_ONE_HOST}:${ETCD_ONE_CLIENT_PORT};
+    upstream cockroachdb_node {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
+    }
+
+    upstream cockroachdb_sql {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
+    }
+
+    upstream cockroachdb_http {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
     }
 
     upstream minio_node {
@@ -22,13 +30,19 @@ stream {
         server ${KAFKA_ONE_HOST}:${KAFKA_ONE_PORT};
     }
 
-    upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    server {
+        listen ${GATEWAY_COCKROACH_NODE_PORT};
+        proxy_pass cockroachdb_node;
     }
 
     server {
-        listen ${GATEWAY_ETCD_CLIENT_PORT};
-        proxy_pass etcd_client;
+        listen ${GATEWAY_COCKROACH_SQL_PORT};
+        proxy_pass cockroachdb_sql;
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_HTTP_PORT};
+        proxy_pass cockroachdb_http;
     }
 
     server {
@@ -44,11 +58,6 @@ stream {
     server {
         listen ${GATEWAY_KAFKA_PORT};
         proxy_pass kafka;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_UI_PORT};
-        proxy_pass kafka_ui;
     }
 
 }
