--- a/many/nginx/two/template.nginx.conf
+++ b/many/nginx/two/template.nginx.conf
@@ -6,6 +6,24 @@ events {
 
 stream {
 
+    upstream cockroachdb_node {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
+        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_NODE_PORT};
+        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_NODE_PORT};
+    }
+
+    upstream cockroachdb_sql {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
+        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
+        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_SQL_PORT};
+    }
+
+    upstream cockroachdb_http {
+        server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
+        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
+        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_HTTP_PORT};
+    }
+
     upstream etcd_client {
         server ${ETCD_ONE_HOST}:${ETCD_ONE_CLIENT_PORT};
         server ${ETCD_TWO_HOST}:${ETCD_TWO_CLIENT_PORT};
@@ -32,6 +50,21 @@ stream {
 
     upstream kafka_ui {
         server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_NODE_PORT};
+        proxy_pass cockroachdb_node;
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_SQL_PORT};
+        proxy_pass cockroachdb_sql;
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_HTTP_PORT};
+        proxy_pass cockroachdb_http;
     }
 
     server {
