--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -13,6 +13,10 @@ stream {
 #         server ${BACKEND_HOST}:${BACKEND_PORT};
 #     }
 
+    upstream langfuse {
+        server ${LANGFUSE_HOST}:${LANGFUSE_PORT};
+    }
+
     upstream redis {
         server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
     }
@@ -58,6 +62,11 @@ stream {
 #         listen ${GATEWAY_BACKEND_PORT};
 #         proxy_pass backend;
 #     }
+
+    server {
+        listen ${GATEWAY_LANGFUSE_PORT};
+        proxy_pass langfuse;
+    }
 
     server {
         listen ${GATEWAY_REDIS_PORT};
