--- a/one/.env
+++ b/one/.env
@@ -2,14 +2,15 @@ GATEWAY_HOST=host.docker.internal
 
 GATEWAY_FRONTEND_PORT=80
 GATEWAY_BACKEND_PORT=8000
+GATEWAY_LANGFUSE_PORT=8080
 GATEWAY_REDIS_PORT=6379
 GATEWAY_REDIS_INSIGHT_PORT=8081
 GATEWAY_COCKROACH_NODE_PORT=26357
 GATEWAY_COCKROACH_SQL_PORT=26257
-GATEWAY_COCKROACH_HTTP_PORT=8080
+GATEWAY_COCKROACH_HTTP_PORT=8082
 GATEWAY_MILVUS_PORT=19530
 GATEWAY_KAFKA_PORT=9092
-GATEWAY_KAFKA_UI_PORT=8082
+GATEWAY_KAFKA_UI_PORT=8083
 GATEWAY_ETCD_CLIENT_PORT=2378
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
@@ -37,6 +38,14 @@ FRONTEND_PORT=${GATEWAY_FRONTEND_PORT}
 
 BACKEND_HOST=backend
 BACKEND_PORT=${GATEWAY_BACKEND_PORT}
+
+LANGFUSE_HOST=langfuse
+LANGFUSE_PORT=${GATEWAY_LANGFUSE_PORT}
+LANGFUSE_NEXTAUTH_SECRET=secret
+LANGFUSE_SALT=salt
+LANGFUSE_NEXT_PUBLIC_SIGN_UP_DISABLED=false
+LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES=true
+LANGFUSE_TELEMETRY_ENABLED=false
 
 REDIS_ONE_HOST=redis-one
 REDIS_ONE_PORT=${GATEWAY_REDIS_PORT}
