--- a/many/nginx/two/template.nginx.conf
+++ b/many/nginx/two/template.nginx.conf
@@ -6,6 +6,12 @@ events {
 
 stream {
 
+    upstream redis {
+        server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
+        server ${REDIS_TWO_HOST}:${REDIS_TWO_PORT};
+        server ${REDIS_THREE_HOST}:${REDIS_THREE_PORT};
+    }
+
     upstream cockroachdb_node {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
         server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_NODE_PORT};
@@ -42,14 +48,9 @@ stream {
         server ${MINIO_THREE_HOST}:${MINIO_THREE_CONSOLE_PORT};
     }
 
-    upstream kafka {
-        server ${KAFKA_ONE_HOST}:${KAFKA_ONE_PORT};
-        server ${KAFKA_TWO_HOST}:${KAFKA_TWO_PORT};
-        server ${KAFKA_THREE_HOST}:${KAFKA_THREE_PORT};
-    }
-
-    upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    server {
+        listen ${GATEWAY_REDIS_PORT};
+        proxy_pass redis;
     }
 
     server {
@@ -80,16 +81,6 @@ stream {
     server {
         listen ${GATEWAY_MINIO_CONSOLE_PORT};
         proxy_pass minio_console;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_PORT};
-        proxy_pass kafka;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_UI_PORT};
-        proxy_pass kafka_ui;
     }
 
 }
