--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -14,7 +14,7 @@ stream {
 #     }
 
     upstream redis {
-        server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
     }
 
     upstream redis_insight {
