--- a/one/nginx/two/template.nginx.conf
+++ b/one/nginx/two/template.nginx.conf
@@ -6,6 +6,10 @@ events {
 
 stream {
 
+    upstream redis {
+        server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
+    }
+
     upstream cockroachdb_node {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
     }
@@ -16,6 +20,10 @@ stream {
 
     upstream cockroachdb_http {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
+    }
+
+    upstream etcd_client {
+        server ${ETCD_ONE_HOST}:${ETCD_ONE_CLIENT_PORT};
     }
 
     upstream minio_node {
@@ -31,6 +39,11 @@ stream {
     }
 
     server {
+        listen ${GATEWAY_REDIS_PORT};
+        proxy_pass redis;
+    }
+
+    server {
         listen ${GATEWAY_COCKROACH_NODE_PORT};
         proxy_pass cockroachdb_node;
     }
@@ -43,6 +56,11 @@ stream {
     server {
         listen ${GATEWAY_COCKROACH_HTTP_PORT};
         proxy_pass cockroachdb_http;
+    }
+
+    server {
+        listen ${GATEWAY_ETCD_CLIENT_PORT};
+        proxy_pass etcd_client;
     }
 
     server {
