--- a/many/.env
+++ b/many/.env
@@ -3,17 +3,17 @@ GATEWAY_HOST=host.docker.internal
 GATEWAY_FRONTEND_PORT=80
 GATEWAY_BACKEND_PORT=8000
 GATEWAY_REDIS_PORT=6379
-GATEWAY_REDIS_INSIGHT_PORT=8081
+GATEWAY_REDIS_INSIGHT_PORT=8080
 GATEWAY_COCKROACH_NODE_PORT=26357
 GATEWAY_COCKROACH_SQL_PORT=26257
-GATEWAY_COCKROACH_HTTP_PORT=8080
+GATEWAY_COCKROACH_HTTP_PORT=8081
 GATEWAY_MILVUS_PORT=19530
 GATEWAY_KAFKA_PORT=9092
 GATEWAY_KAFKA_UI_PORT=8082
 GATEWAY_ETCD_CLIENT_PORT=2378
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
-GATEWAY_MINIO_CONSOLE_PORT=9001
+GATEWAY_MINIO_CONSOLE_PORT=8083
 
 GATEWAY_REDIS_PASSWORD=password
 
@@ -48,7 +48,7 @@ REDIS_THREE_HOST=redis-three
 REDIS_THREE_PORT=${GATEWAY_REDIS_PORT}
 REDIS_THREE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
 REDIS_INSIGHT_ONE_HOST=redis-insight-one
-REDIS_INSIGHT_ONE_PORT=5540
+REDIS_INSIGHT_ONE_PORT=${GATEWAY_REDIS_INSIGHT_PORT}
 
 MILVUS_PROXY_HOST=milvus-proxy
 MILVUS_PROXY_PORT=${GATEWAY_MILVUS_PORT}
