--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -14,9 +14,7 @@ stream {
 #     }
 
     upstream redis {
-        server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
-        server ${REDIS_TWO_HOST}:${REDIS_TWO_PORT};
-        server ${REDIS_THREE_HOST}:${REDIS_THREE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
     }
 
     upstream redis_insight {
@@ -24,41 +22,31 @@ stream {
     }
 
     upstream cockroachdb_sql {
-        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_SQL_PORT};
-        server ${NGINX_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
-        server ${NGINX_TWO_HOST}:${COCKROACH_THREE_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_COCKROACH_SQL_PORT};
     }
 
     upstream cockroachdb_http {
-        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_HTTP_PORT};
-        server ${NGINX_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
-        server ${NGINX_TWO_HOST}:${COCKROACH_THREE_HTTP_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_COCKROACH_HTTP_PORT};
     }
 
     upstream milvus {
-        server ${NGINX_TWO_HOST}:${MILVUS_PROXY_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_MILVUS_PORT};
     }
 
     upstream minio_node {
-        server ${NGINX_TWO_HOST}:${MINIO_ONE_NODE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_TWO_NODE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_THREE_NODE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_NODE_PORT};
     }
 
     upstream minio_console {
-        server ${NGINX_TWO_HOST}:${MINIO_ONE_CONSOLE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_TWO_CONSOLE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_THREE_CONSOLE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_CONSOLE_PORT};
     }
 
     upstream kafka {
-        server ${NGINX_TWO_HOST}:${KAFKA_ONE_PORT};
-        server ${NGINX_TWO_HOST}:${KAFKA_TWO_PORT};
-        server ${NGINX_TWO_HOST}:${KAFKA_THREE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_PORT};
     }
 
     upstream kafka_ui {
-        server ${NGINX_TWO_HOST}:${KAFKA_UI_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_UI_PORT};
     }
 
 #     server {
