--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -33,6 +33,10 @@ stream {
         server ${NGINX_TWO_HOST}:${GATEWAY_MILVUS_PORT};
     }
 
+    upstream milvus_attu {
+        server ${MILVUS_ATTU_ONE_HOST}:${MILVUS_ATTU_ONE_PORT};
+    }
+
     upstream minio_node {
         server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_NODE_PORT};
     }
@@ -82,6 +86,11 @@ stream {
     server {
         listen ${GATEWAY_MILVUS_PORT};
         proxy_pass milvus;
+    }
+
+    server {
+        listen ${GATEWAY_MILVUS_ATTU_PORT};
+        proxy_pass milvus_attu;
     }
 
     server {
