--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -38,19 +38,19 @@ stream {
     }
 
     upstream minio_node {
-        server ${NGINX_TWO_HOST}:${MINIO_ONE_NODE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_NODE_PORT};
     }
 
     upstream minio_console {
-        server ${NGINX_TWO_HOST}:${MINIO_ONE_CONSOLE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_MINIO_CONSOLE_PORT};
     }
 
     upstream kafka {
-        server ${NGINX_TWO_HOST}:${KAFKA_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_PORT};
     }
 
     upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_UI_PORT};
     }
 
 #     server {
