Revise env and redis.

--- a/docker/research-assistant-backend-dev/.env
+++ b/docker/research-assistant-backend-dev/.env
@@ -1,5 +1,18 @@
+APP_PATH=C:\Data\Apps\research-assistant-backend
+CACHE_PATH=C:\Data\Apps\research-assistant-infrastructure\data\cache
+NLTK_DATA_PATH=C:\Data\Apps\research-assistant-infrastructure\data\nltk_data
+
 JUPYTER_PORT=8888
-GATEWAY_HOST=host.docker.internal
+JUPYTER_TOKEN=token
+
+GATEWAY_HOST=192.168.137.2
+
 GATEWAY_MINIO_NODE_PORT=9000
 GATEWAY_MINIO_ROOT_USER=user
 GATEWAY_MINIO_ROOT_PASSWORD=password
+
+GATEWAY_COCKROACH_SQL_PORT=26257
+GATEWAY_COCKROACH_USER=user
+GATEWAY_COCKROACH_PASSWORD=
+GATEWAY_COCKROACH_DATABASE=database
+
